--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -56,7 +56,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #181a1b;
-    background-color: #e8e6e3;
+    background: #CB4949;
   }
 
   a:hover {
