--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,6 +13,7 @@
   background: linear-gradient(159deg, #D75E5E 0%, rgba(82, 72, 156, 0.71) 68.75%, #52489ca8 50%), url('./assets/nnnoise.svg');
   background-attachment: fixed;
   background-position: center;
+  background-repeat: no-repeat;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
