--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,10 +10,8 @@
   color-scheme: light dark;
   color: #181a1b;
   background-color: #000000;
-  background: linear-gradient(159deg, #D75E5E 0%, rgba(82, 72, 156, 0.71) 68.75%, #52489ca8 50%), url('./assets/nnnoise.svg');
+  background: linear-gradient(159deg, #D75E5E 0%, rgba(82, 72, 156, 0.71) 68.75%, #52489ca8 50%) center no-repeat, url('./assets/nnnoise.svg') center repeat;
   background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
