--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -58,6 +58,25 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+
+
+.marker {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  width: 30px;
+  height: 30px;
+  color: #fff;
+  background: rgb(251, 20, 94);
+  border: solid 2px;
+  border-radius: 0 70% 70%;
+  box-shadow: 0 0 2px #000;
+  cursor: pointer;
+  transform-origin: 0 0;
+  /* transform: rotateZ(-135deg); */
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #181a1b;
